--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <div class="header">
             <h1>Pomodoro Timer</h1>
             <button id="mode-toggle" class="work-mode toggle-switch" aria-label="Toggle Mode">
-                <span class="toggle-icon">🎯</span>
-                <span class="toggle-icon">☕</span>
+                <span class="toggle-icon">☀️</span>
             </button>
         </div>
         <div class="timer">
