add 1 minute button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <button id="pause" class="hidden">Pause</button>
             <button id="resume" class="hidden">Resume</button>
             <button id="reset">Reset</button>
+            <button id="add-minute">+1 Min</button>
         </div>
         <div class="status">
             <p id="status-text">Work Time</p>
